[gd_scene load_steps=5 format=3 uid="uid://crius772ncji1"]

[ext_resource type="Script" path="res://script/options_menu.gd" id="1_rxkhb"]
[ext_resource type="Script" path="res://script/Options.gd" id="2_axryn"]
[ext_resource type="Script" path="res://script/ConfigTouch.gd" id="3_m1gl5"]
[ext_resource type="Script" path="res://script/Sound.gd" id="4_pspuw"]

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rxkhb")

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_axryn")

[node name="Panel" type="Panel" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -136.0
offset_right = 113.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 22.0
offset_right = -20.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35

[node name="Label" type="Label" parent="Main/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="VBoxContainer2" type="VBoxContainer" parent="Main/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Sound" type="Button" parent="Main/Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "SOUND"

[node name="Config Touch" type="Button" parent="Main/Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
text = "CONFIG TOUCH"

[node name="Exit" type="Button" parent="Main/Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "CANCEL"

[node name="ConfigTouch" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_m1gl5")

[node name="Panel" type="Panel" parent="ConfigTouch"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -497.0
offset_top = -211.5
offset_right = 497.0
offset_bottom = 211.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ConfigTouch/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 22.0
offset_right = -27.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35

[node name="Config Touch" type="Label" parent="ConfigTouch/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "CONFIG TOUCH"

[node name="HBoxContainer" type="HBoxContainer" parent="ConfigTouch/Panel/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 30
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Up" type="Button" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
process_mode = 3
layout_mode = 2
text = "UP"

[node name="Label" type="Label" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2/Up"]
layout_direction = 2
layout_mode = 0
offset_left = 300.0
offset_right = 300.0
offset_bottom = 23.0
text = "
"

[node name="Down" type="Button" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "DOWN"

[node name="Label" type="Label" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2/Down"]
layout_mode = 0
offset_left = 300.0
offset_right = 301.0
offset_bottom = 23.0

[node name="Left" type="Button" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
text = "LEFT"

[node name="Label" type="Label" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2/Left"]
layout_mode = 0
offset_left = 300.0
offset_right = 301.0
offset_bottom = 23.0

[node name="Right" type="Button" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "RIGHT
"

[node name="Label" type="Label" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2/Right"]
layout_mode = 0
offset_left = 300.0
offset_right = 301.0
offset_bottom = 23.0

[node name="Interact" type="Button" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "INTERACT"

[node name="Label" type="Label" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2/Interact"]
layout_mode = 0
offset_left = 300.0
offset_right = 301.0
offset_bottom = 23.0

[node name="VBoxContainer" type="VBoxContainer" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Break" type="Button" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "BREAK"

[node name="Label" type="Label" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Break"]
layout_mode = 0
offset_left = 300.0
offset_right = 301.0
offset_bottom = 23.0

[node name="Button1" type="Button" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "BUTTON 1"

[node name="Label" type="Label" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Button1"]
layout_mode = 0
offset_left = 300.0
offset_right = 301.0
offset_bottom = 23.0

[node name="Button2" type="Button" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "BUTTON 2"

[node name="Label" type="Label" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Button2"]
layout_mode = 0
offset_left = 300.0
offset_right = 301.0
offset_bottom = 23.0

[node name="Button3" type="Button" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "BUTTON 3"

[node name="Label" type="Label" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Button3"]
layout_mode = 0
offset_left = 300.0
offset_right = 301.0
offset_bottom = 23.0

[node name="Button4" type="Button" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "BUTTON 4"

[node name="Label" type="Label" parent="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Button4"]
layout_mode = 0
offset_left = 300.0
offset_right = 301.0
offset_bottom = 23.0

[node name="Cancel" type="Button" parent="ConfigTouch/Panel/VBoxContainer"]
layout_mode = 2
text = "CANCEL"

[node name="Sound" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_pspuw")

[node name="Panel" type="Panel" parent="Sound"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -98.0
offset_right = 113.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Sound/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 22.0
offset_right = -20.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35

[node name="Label" type="Label" parent="Sound/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Sound"

[node name="VBoxContainer2" type="VBoxContainer" parent="Sound/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="sound" type="HSlider" parent="Sound/Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
min_value = -24.0
max_value = 2.08165e-12

[node name="Cancel" type="Button" parent="Sound/Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 8
text = "CANCEL"

[connection signal="pressed" from="Main/Panel/VBoxContainer/VBoxContainer2/Sound" to="Main" method="_on_sound_pressed"]
[connection signal="pressed" from="Main/Panel/VBoxContainer/VBoxContainer2/Sound" to="Sound" method="_on_sound_pressed"]
[connection signal="pressed" from="Main/Panel/VBoxContainer/VBoxContainer2/Config Touch" to="Main" method="_on_config_touch_pressed"]
[connection signal="pressed" from="Main/Panel/VBoxContainer/VBoxContainer2/Config Touch" to="ConfigTouch" method="_on_config_touch_pressed"]
[connection signal="pressed" from="Main/Panel/VBoxContainer/VBoxContainer2/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2/Up" to="ConfigTouch" method="_on_up_pressed"]
[connection signal="pressed" from="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2/Down" to="ConfigTouch" method="_on_down_pressed"]
[connection signal="pressed" from="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2/Left" to="ConfigTouch" method="_on_left_pressed"]
[connection signal="pressed" from="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2/Right" to="ConfigTouch" method="_on_right_pressed"]
[connection signal="pressed" from="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer2/Interact" to="ConfigTouch" method="_on_interact_pressed"]
[connection signal="pressed" from="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Break" to="ConfigTouch" method="_on_break_pressed"]
[connection signal="pressed" from="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Button1" to="ConfigTouch" method="_on_button_1_pressed"]
[connection signal="pressed" from="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Button2" to="ConfigTouch" method="_on_button_2_pressed"]
[connection signal="pressed" from="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Button3" to="ConfigTouch" method="_on_button_3_pressed"]
[connection signal="pressed" from="ConfigTouch/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Button4" to="ConfigTouch" method="_on_button_4_pressed"]
[connection signal="pressed" from="ConfigTouch/Panel/VBoxContainer/Cancel" to="Main" method="_on_cancel_pressed"]
[connection signal="pressed" from="ConfigTouch/Panel/VBoxContainer/Cancel" to="ConfigTouch" method="_on_cancel_pressed"]
[connection signal="pressed" from="Sound/Panel/VBoxContainer/VBoxContainer2/Cancel" to="Main" method="_on_cancel_pressed"]
[connection signal="pressed" from="Sound/Panel/VBoxContainer/VBoxContainer2/Cancel" to="ConfigTouch" method="_on_cancel_pressed"]
[connection signal="pressed" from="Sound/Panel/VBoxContainer/VBoxContainer2/Cancel" to="Sound" method="_on_cancel_pressed"]
